--- a/argo-cd-apps/base/enterprise-contract.yaml
+++ b/argo-cd-apps/base/enterprise-contract.yaml
@@ -18,7 +18,7 @@ spec:
           strategy:
             type: Recreate
           ingress:
-            hostname: rekor-server.enterprise-contract-service.svc
+            hostname: rekor.apps.gitopsrvce-stg.jjas.p1.openshiftapps.com
             annotations:
               route.openshift.io/termination: "edge"
         mysql:
