--- a/argo-cd-apps/base/member/optional/helm/rekor/rekor.yaml
+++ b/argo-cd-apps/base/member/optional/helm/rekor/rekor.yaml
@@ -23,7 +23,7 @@ spec:
               strategy:
                 type: Recreate
               ingress:
-                hostname: rekor-server.enterprise-contract-service.svc
+                hostname: rekor.apps.gitopsrvce-stg.lfyl.p1.openshiftapps.com
                 annotations:
                   route.openshift.io/termination: "edge"
             mysql:
